--- a/src/App.sass
+++ b/src/App.sass
@@ -61,14 +61,27 @@ section
                 flex: 0 0 20% !important
                 max-width: 20% !important
             .product-box   
+                cursor: pointer
                 .img
                     background: #FFF
                     border: 1px solid rgba(0, 0, 0, 0.1)
                     padding: 21px 20.24px 20px 21px
                     text-align: center
                     border-radius: 10px
+                    margin-bottom: 11px
                     img
                         width: 100%
+                .infos
+                    h2
+                        font-weight: 600
+                        line-height: 19px
+                        margin-bottom: 0
+                        font-size: 14px
+                    .price
+                        font-size: 14px
+                        line-height: 19px
+                        color: rgba(42, 49, 75, 0.4)
+
                 
             
    
