--- a/src/App.sass
+++ b/src/App.sass
@@ -30,7 +30,8 @@ header
             border-radius: 15px
             border-color: #f9f9fa
             .ant-input-prefix
-                width: 42px
+                width: 20px
+                margin: 0px 17px 0px 8px
 
 section
     background: transparent !important
@@ -91,10 +92,59 @@ section
             img
                 margin-top: -1px
         .empty-cart
+            padding-top: 233px
             color: rgba(42, 49, 75, 0.4)
             img
                 margin-bottom: 33.29px
+                
+        .wish-list
+            padding: 0
+            list-style: none
+            margin: 0
+            li
+                border-bottom: 1px solid #ddd
+                padding: 20px 0
+                .img
+                    display: block
+                    background: #FFF
+                    border: 1px solid rgba(0, 0, 0, 0.1)
+                    text-align: center
+                    border-radius: 5px
+                    overflow: hidden
+                    margin-right: 11.76px
+                .infos 
+                    span 
+                        display: block
+                    .title
+                        font-size: 14px
+                        margin-bottom: 6.57px
+                        color: rgba(42, 49, 75, 0.6)
+                        line-height: 20px
+                    .ant-input-number
+                        background: transparent
+                        border-color: rgba(0, 0, 0, 0.1)
+                        width: 62.6px
+                        border-radius: 5px
+                        input
+                            font-family: 'Work Sans', sans-serif
+                            font-weight: 600 
+                            color: rgba(42, 49, 75, 0.8)
+                .action
+                    text-align: right
+                    margin-left: 7px
+                    span
+                        display: block
+                    .price
+                        font-weight: 600 
+                        color: rgba(42, 49, 75, 0.8)
+                        margin-bottom: 11.57px
+                    .remove
+                        font-size: 12px
+                        color: rgba(235, 82, 36, 1)
+                        text-transform: uppercase
+                        cursor: pointer
             
+
 .product-detail 
     border-radius: 5px
     overflow: hidden
@@ -165,5 +215,3 @@ section
             font-weight: 600
             border-radius: 10px !important
             box-shadow: 0px 0px 10px rgba(51, 197, 243, 0.4)
-        
-
