--- a/src/App.sass
+++ b/src/App.sass
@@ -101,8 +101,10 @@ section
             padding: 0
             list-style: none
             margin: 0
+            height: 450px
+            overflow: auto
             li
-                border-bottom: 1px solid #ddd
+                border-bottom: 1px solid rgba(42, 49, 75, 0.1)
                 padding: 20px 0
                 .img
                     display: block
@@ -129,6 +131,7 @@ section
                             font-family: 'Work Sans', sans-serif
                             font-weight: 600 
                             color: rgba(42, 49, 75, 0.8)
+                            text-align: center
                 .action
                     text-align: right
                     margin-left: 7px
@@ -143,8 +146,50 @@ section
                         color: rgba(235, 82, 36, 1)
                         text-transform: uppercase
                         cursor: pointer
-            
+            li:last-child
+                border: 0
 
+        .wish-list-footer 
+            .ant-col-24 
+                padding: 20px 0
+                border-top: 1px solid rgba(42, 49, 75, 0.1)
+                .ant-col
+                    .line
+                        display: block
+                    .line:first-child
+                        padding-bottom: 6.57px
+                    
+            .subtotal
+                color: rgba(42, 49, 75, 0.6)
+                .price
+                    color: rgba(42, 49, 75, 0.8)
+                    font-weight: 600
+                    text-align: right
+                .shipping
+                    color: rgba(0, 198, 144, 1)
+                    font-weight: 600
+                    text-align: right
+            .total
+                font-size: 18px
+                color: rgba(42, 49, 75, 0.6)
+                line-height: 1
+                padding-bottom: 16px
+                .price
+                    color: rgba(42, 49, 75, 0.8)
+                    font-weight: 600
+                    text-align: right
+            .btn
+                .ant-btn-round.ant-btn-lg 
+                    height: auto
+                    border-color: rgba(51, 197, 243, 1)
+                    background: rgba(51, 197, 243, 1)
+                    line-height: 18px
+                    padding: 11px 18.85px 14px 15.5px
+                    font-size: 16px
+                    font-weight: 600
+                    border-radius: 10px !important
+                    box-shadow: 0px 0px 10px rgba(51, 197, 243, 0.4)
+        
 .product-detail 
     border-radius: 5px
     overflow: hidden
@@ -215,3 +260,14 @@ section
             font-weight: 600
             border-radius: 10px !important
             box-shadow: 0px 0px 10px rgba(51, 197, 243, 0.4)
+        .ant-input-number
+            height: 45px
+            border-color: rgba(0, 0, 0, 0.1)
+            border-radius: 5px
+            input 
+                height: 45px
+                text-align: center
+                color: rgba(42, 49, 75, 0.8)
+                font-family: 'Work Sans', sans-serif
+                font-size: 18px
+
