--- a/src/App.sass
+++ b/src/App.sass
@@ -49,6 +49,7 @@ section
                     padding: 0 0 17px 0
                 .ant-tabs-tab-active 
                     font-weight: 600
+                    color: #33c5f3
         .ant-tabs-content  
             .ant-col-5 
                 -ms-flex: 0 0 20% !important
@@ -264,10 +265,47 @@ section
             height: 45px
             border-color: rgba(0, 0, 0, 0.1)
             border-radius: 5px
+            overflow: hidden
+            .ant-input-number-handler-wrap
+                position: absolute
+                top: 0
+                right: 0
+                width: 100%
+                z-index: 1
+                height: 100%
+                border: 0
+                border-radius: 0
+                opacity: 1
+                -webkit-transition: none
+                transition: none
+                .ant-input-number-handler-up
+                    border-top-right-radius: 2px
+                    cursor: pointer
+                    right: 0
+                    height: 100%
+                    width: 26px
+                    position: absolute
+                    border: 0
+                .ant-input-number-handler-down 
+                    top: 0
+                    border-top: 0
+                    border-bottom-right-radius: 2px
+                    cursor: pointer
+                    left: -4px
+                    height: 100%
+                    width: 26px
+                    border: 0
+
+        .ant-input-number-input-wrap
+            z-index: 1
+            position: relative
+            margin: 0 auto
+            display: block
+            width: 34px
             input 
                 height: 45px
                 text-align: center
                 color: rgba(42, 49, 75, 0.8)
                 font-family: 'Work Sans', sans-serif
-                font-size: 18px
+                font-size: 18px 
 
